<resources>
    <string name="app_name">EcoTronik</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="ewastepoint_description">Total Eco Point</string>
    <string name="ewaste_transaction_description">Transaksi</string>
    <string name="greeting">Selamat Datang,</string>
    <string name="notification">notification</string>
    <string name="settings">settings</string>
    <string name="scanner">Scanner</string>
    <string name="form">Form</string>
    <string name="edutron">EduTron</string>
    <string name="redeem">Redeem</string>
    <string name="history">History</string>
    <string name="info">Info</string>
    <string name="greeting2">Halo,</string>
    <string name="label_name">Nama</string>
    <string name="label_address">Alamat</string>
    <string name="label_email">Email</string>
    <string name="label_telp">No Telepon</string>
    <string name="logout">Keluar</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="setor">Setor</string>
    <string name="to_home">Halaman Awal</string>
</resources>