<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_top"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/background_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginVertical="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_greeting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/greeting"
                android:textColor="@color/white"
                android:textSize="14sp"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="M. Fidyan Fatra Aldino"
                app:layout_constraintTop_toBottomOf="@id/tv_greeting"
                tools:ignore="MissingConstraints" />

            <ImageButton
                android:id="@+id/btn_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@color/primary"
                android:contentDescription="@string/notification"
                android:foregroundGravity="center"
                android:src="@drawable/ic_notification_32"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_setting"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/btn_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/primary"
                android:contentDescription="@string/settings"
                android:foregroundGravity="center"
                android:src="@drawable/ic_settings_32"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginVertical="20dp"
            android:background="@drawable/background_content"
            android:paddingHorizontal="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_title">

            <LinearLayout
                android:id="@+id/layout_ewaste_point"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints">

                <TextView
                    android:id="@+id/tv_ewaste_point"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary"
                    android:text="0 EP"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ewastepoint_description" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_transaction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="MissingConstraints">

                <TextView
                    android:id="@+id/tv_ewaste_transaction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary"
                    android:text="5"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ewaste_transaction_description" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:paddingTop="15dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingBottom="30dp"
        android:layout_marginBottom="290dp"
        android:background="@drawable/background_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:outlineAmbientShadowColor="@color/black">

        <ImageButton
            android:id="@+id/btn_scanner"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            android:background="@drawable/circle_background"
            android:padding="14dp"
            android:src="@drawable/ic_scan_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scanner"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@id/btn_scanner"
            app:layout_constraintStart_toStartOf="@id/btn_scanner"
            app:layout_constraintTop_toBottomOf="@id/btn_scanner" />

        <ImageButton
            android:id="@+id/btn_form"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            android:background="@drawable/circle_background"
            android:padding="14dp"
            android:src="@drawable/ic_edit_24"
            app:layout_constraintStart_toEndOf="@id/btn_scanner"
            app:layout_constraintEnd_toStartOf="@id/btn_edutron"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/btn_form"
            app:layout_constraintEnd_toEndOf="@id/btn_form"
            app:layout_constraintTop_toBottomOf="@id/btn_form"
            android:textColor="@color/black"
            android:text="@string/form" />

        <ImageButton
            android:id="@+id/btn_edutron"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            android:background="@drawable/circle_background"
            android:padding="14dp"
            android:src="@drawable/ic_edutron_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/btn_edutron"
            app:layout_constraintEnd_toEndOf="@id/btn_edutron"
            app:layout_constraintTop_toBottomOf="@id/btn_edutron"
            android:textColor="@color/black"
            android:text="@string/edutron" />

        <ImageButton
            android:id="@+id/btn_redeem"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/circle_background"
            android:padding="14dp"
            android:src="@drawable/ic_discount_24"
            app:layout_constraintEnd_toEndOf="@+id/btn_scanner"
            app:layout_constraintStart_toStartOf="@+id/btn_scanner"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:ignore="MissingConstraints" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/btn_redeem"
            app:layout_constraintEnd_toEndOf="@id/btn_redeem"
            app:layout_constraintTop_toBottomOf="@id/btn_redeem"
            android:textColor="@color/black"
            android:text="@string/redeem" />

        <ImageButton
            android:id="@+id/btn_history"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            android:background="@drawable/circle_background"
            android:padding="14dp"
            android:src="@drawable/ic_history_24"
            app:layout_constraintEnd_toEndOf="@+id/btn_form"
            app:layout_constraintStart_toStartOf="@+id/btn_form"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:ignore="MissingConstraints" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/btn_history"
            app:layout_constraintEnd_toEndOf="@id/btn_history"
            app:layout_constraintTop_toBottomOf="@id/btn_history"
            android:textColor="@color/black"
            android:text="@string/history" />

        <ImageButton
            android:id="@+id/btn_null"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            android:background="@drawable/circle_background"
            android:padding="14dp"
            app:layout_constraintEnd_toEndOf="@+id/btn_edutron"
            app:layout_constraintStart_toStartOf="@+id/btn_edutron"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:ignore="MissingConstraints" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>